k8s/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rankingservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rankingservice
  template:
    metadata:
      labels:
        app: rankingservice
    spec:
      containers:
        - name: rankingservice
          image: sneha0911/rankingservice:latest
          ports:
            - containerPort: 8093
