k8s/app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-rankingservice
  namespace: rsn
spec:
  rules:
    - host: rankingservice.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rankingservice-svc
                port:
                  number: 80 # This matches the 'port' from the Service above
